--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,1 +1,59 @@
-<p>footer works!</p>
+  <!-- Site footer -->
+  <footer class="site-footer">
+    <div class="footer-main">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-12 col-md-6">
+            <h6>À PROPOS</h6>
+            <p class="text-justify">
+              Global Support Services met à votre disposition des <br>
+              professionnels du travail. Un service de qualité par des <br>
+              personnes travailleuses, déterminées et disponibles. <br><br>
+              Votre satisfaction notre priorité.
+            </p>
+          </div>
+
+          <div class="col-xs-6 col-md-3">
+            <h6>INFORMATIONS</h6>
+            <ul class="footer-links">
+              <li><a href="http://scanfcode.com/category/c-language/">Informations de livraison</a></li>
+              <li><a href="http://scanfcode.com/category/front-end-development/">Informations de paiement</a></li>
+              <li><a href="http://scanfcode.com/category/back-end-development/">contact</a></li>
+              <li><a href="http://scanfcode.com/category/java-programming-language/">Suivi de commande</a></li>
+              <li><a href="http://scanfcode.com/category/android/">Service Clients</a></li>
+            </ul>
+          </div>
+
+          <div class="col-xs-6 col-md-3">
+            <h6>CONTACTER-NOUS</h6>
+            <ul class="footer-links">
+              <li>+237 691 10 11 81</li>
+              <li>info@global-supportservices.com</li>
+              <li>Station service OLA omnisport</li>
+              <li>(ancien mobile omnisport près du stade Yaoundé, Cameroun)</li>
+            </ul>
+          </div>
+        </div>
+        <hr>
+      </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-8 col-sm-6 col-xs-12">
+            <p class="copyright-text">Copyright &copy; 2017 All Rights Reserved by
+         <a href="#">Scanfcode</a>.
+            </p>
+          </div>
+
+          <div class="col-md-4 col-sm-6 col-xs-12">
+            <ul class="social-icons">
+              <li><a class="facebook" href="#"><i class="fa fa-facebook"></i></a></li>
+              <li><a class="twitter" href="#"><i class="fa fa-twitter"></i></a></li>
+              <li><a class="dribbble" href="#"><i class="fa fa-dribbble"></i></a></li>
+              <li><a class="linkedin" href="#"><i class="fa fa-linkedin"></i></a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+
+</footer>
