--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,18 +1,81 @@
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
+
 <header>
-  <div class="header-bottom theme1 d-none d-lg-block">
-    <div class="container">
-      <div class="row align-items-center">
-        <div class="col-lg-10 offset-lg-2 d-flex flex-wrap align-items-center position-relative">
-          <ul class="main-menu d-flex">
-            <li routerLinkActive="active"><a routerLink="/home">Home</a></li>
-            <li routerLinkActive="active"><a routerLink="/shop">Shop</a></li>
-            <li routerLinkActive="active"><a>Category</a></li>
-            <li routerLinkActive="active"><a routerLink="/contact">Contact</a></li>
-            <li routerLinkActive="active"><a routerLink="/login">Login</a></li>
-            <li routerLinkActive="active"><a routerLink="/register">register</a></li>
+    <nav>
+      <div class="topnav">
+        <div class="topnav-left">
+          <p><i class="fas fa-phone-alt"></i> +237 691 10 11 81</p>
+          <p><i class="far fa-envelope"></i>info@global-supportservices.com</p>
+        </div>
+        <div class="topnav-right">
+          <ul>
+            <li> <a href="">Mon compte</a></li>
+            <li> <a href=""> Mes préférés </a> </li>
+            <li> <a routerLink="/login">Connexion</a> </li>
+            <li> <a routerLink="/register">Inscription</a> </li>
           </ul>
         </div>
       </div>
+      <div class="nav-contain">
+        <div id="logo">
+          <a href=""><img src="assets/img/Header/global.png" alt=""></a>
+        </div>
+        <div class="nav-contain-right">
+          <ul>
+            <li routerLinkActive="active"><a class="active" routerLink="/home">Accueil</a></li>
+            <li routerLinkActive="active"><a routerLink="/shop">Boutique</a></li>
+            <li routerLinkActive="active"><a href="">Catégorie</a></li>
+            <li routerLinkActive="active"><a routerLink="/contact">Contact</a></li>
+            <div class="cart-icon">
+              <i class="fas fa-shopping-cart"></i>
+            </div>
+            <div class="input-group">
+              <input type="search" class="form-control" placeholder="Search" aria-label="Search"
+              aria-describedby="search-addon" />
+              <button type="button" class="btn-search">search</button>
+            </div>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+      </div>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img class="d-block w-100 h-100" src="assets/img/Header/ballpoint-pen-62375_1920.jpg" alt="First slide">
+          <div class="carousel-caption">
+            <h5>Fournitures de bureau</h5>
+            <p>Fournitures de bureau personnalisables à votre image.</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100 h-100" src="assets/img/Header/pencils-5474594_1920.jpg" alt="Second slide">
+          <div class="carousel-caption">
+            <h5>Fournitures scolaires</h5>
+            <p>Fournitures scolaires de haute qualité.</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100 h-100" src="assets/img/Header/desk-4334575_1920.jpg" alt="Third slide">
+          <div class="carousel-caption">
+            <h5>Matériel informatique</h5>
+            <p>Des outils technologiques de pointe.</p>
+          </div>
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
     </div>
-  </div>
 </header>
+
+
