mise en place du routeur, création de quelques composants suplémentaires

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -9,7 +9,7 @@
         </div>
         <div class="topnav-right">
           <ul>
-            <li> <a href="">Mon compte</a></li>
+            <li> <a routerLink="/account">Mon compte</a></li>
             <li> <a href=""> Mes préférés </a> </li>
             <li> <a routerLink="/login">Connexion</a> </li>
             <li> <a routerLink="/register">Inscription</a> </li>
