--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,158 @@
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
+
 <app-header></app-header>
 
+<section id="team">
+  <div class="container">
+      <div class="row justify-content-center">
+          <div class="col-md-6">
+            <h2>NOTRE MAGNIFIQUE ÉQUIPE</h2>
+            <p>Voici nos collaborateurs pour une productivité maximale</p>
+          </div>
+      </div>
+      <div class="row">
+          <div class="col-lg-3 col-md-6">
+              <div class="member">
+                <div class="member-img">
+                    <img src="assets/img/Content/team/linda.jpeg" class="img-fluid w-50" alt="">
+                </div>
+                  <div class="member-info">
+                      <h4>Linda Kouamou</h4>
+                      <span>Assistante commerciale</span>
+                      <div class="social-links">
+                          <a href="https://www.facebook.com/linda.kouamou"><i class="fab fa-facebook-f"></i></a>
+                          <a href="https://twitter.com/KouamouLinda"><i class="fab fa-twitter"></i></a>
+                          <a href="https://www.instagram.com/nzountote/"><i class="fab fa-instagram"></i></a>
+                          <a href="mailto:l.kouamou@global-supportservices.com"><i class="far fa-envelope"></i></a>
+                      </div>
+                  </div>
+              </div>
+          </div>
 
+          <div class="col-lg-3 col-md-6">
+              <div class="member">
+                <div class="member-img">
+                    <img src="assets/img/Content/team/désirée.jpeg" class="img-fluid" alt="">
+                </div>
+                  <div class="member-info">
+                      <h4>Désirée Bwandji</h4>
+                      <span>Gérante</span>
+                      <div class="social-links">
+                          <a href="https://www.facebook.com/desiree.bwandjitchuisseu"><i class="fab fa-facebook-f"></i></a>
+                          <a href="https://twitter.com/DBwanji"><i class="fab fa-twitter"></i></a>
+                          <a href="https://www.instagram.com/bwandjitchuisseu/?hl=fr"><i class="fab fa-instagram"></i></a>
+                          <a href="mailto:d.bwandji@global-supportservices.com"><i class="far fa-envelope"></i></a>
+                      </div>
+                  </div>
+              </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6">
+              <div class="member">
+                <div class="member-img">
+                    <img src="assets/img/Content/team/loriane.jpeg" class="img-fluid" alt="">
+                </div>
+                  <div class="member-info">
+                      <h4>Loriane Tchuisseu</h4>
+                      <span>Assistante commerciale</span>
+                      <div class="social-links">
+                          <a href="https://www.facebook.com/leoriane.tchuisseu"><i class="fab fa-facebook-f"></i></a>
+                          <a href="https://twitter.com/LTchuisseu"><i class="fab fa-twitter"></i></a>
+                          <a href="https://www.instagram.com/lorivne_t_/?hl=fr"><i class="fab fa-instagram"></i></a>
+                          <a href="mailto:l.tchuisseu@global-supportservices.com"><i class="far fa-envelope"></i></a>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </div>
+</section>
+
+
+<div class="about-section">
+  <div class="container">
+    <div class="about-title text-center">
+      <h2>À PROPOS</h2>
+      <p>Global Support Services met à votre disposition des professionnels du travail. Un service de qualité par des personnes travailleuses, <br> déterminées et disponibles. Votre satisfaction notre priorité. </p>
+    </div>
+    <div class="about-inner-section">
+      <div class="col-md-6 about-inner-column">
+        <h3>Qui sommes-nous ? </h3>
+        <p>La gérante: après avoir terminé mes études en commerce, j’ai tout de suite voulu me lancer et m’intégrer dans le milieu professionnel.
+          Le désir d'être à son propre compte a pris le dessus et c'est ainsi qu'est née l'entreprise. <br>
+          La société se focalise principalement dans la distribution de fournitures de bureau et matériel de première nécessité pour les réfugiés (vêtements, chaussures, etc..).
+          Nous nous engageons à respecter les attentes et les demandes de la clientèle.
+          Nous sommes réactifs aux demandes de nos clients, nos services sont délivrés avec professionnalisme. <br>
+          Global Support Services compte pour l’instant trois employés permanents. Nous avons des partenariats avec plusieurs clients notamment
+          : IMC, PNUD, UNFPA et la Croix-rouge représentation Afrique Centrale.</p>
+      </div>
+      <div class="col-md-6 about-right">
+      <img src="assets/img/Content/about/brick-5066287_1920.jpg" alt=" ">
+    </div>
+      <div class="clearfix"> </div>
+    </div>
+  </div>
+</div>
+
+
+
+
+<section class="section services-section" id="services">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="section-title">
+                    <h2>Ce que nous faisons</h2>
+                    <p>Voici nos différents services</p>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-6 col-lg-4">
+                <div class="feature-box-1">
+                    <div class="icon">
+                        <i class="fa fa-pencil-alt"></i>
+                    </div>
+                    <div class="feature-content">
+                        <h5>Fournitures de bureau</h5>
+                        <p>Fournitures de bureau personnalisables à votre image:
+                          pots à crayon, carnets, agenda, calendriers, surligneurs,
+                          chemises à rabats, supports de téléphone, Post-it, ciseaux,
+                          classeurs, scotchs, etc..</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6 col-lg-4">
+                <div class="feature-box-1">
+                    <div class="icon">
+                        <i class="fa fa-book"></i>
+                    </div>
+                    <div class="feature-content">
+                        <h5>Fournitures scolaires</h5>
+                        <p>Fournitures scolaires de haute qualité:
+                          stylos, crayons, taille-crayons, gommes, effaceurs,
+                          livres, dictionnaires, papiers, sacs à dos, classeurs,
+                          règles, ciseaux, calculatrices, trousses, etc..</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6 col-lg-4">
+                <div class="feature-box-1">
+                    <div class="icon">
+                        <i class="fa fa-desktop"></i>
+                    </div>
+                    <div class="feature-content">
+                        <h5>Matériel informatique</h5>
+                        <p>Des outils technologiques de pointe: ordinateurs,
+                          téléphones portables, tablettes, souris, claviers, écrans,
+                          clés USB, imprimantes, écouteurs, casques, webcams, etc..</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<app-features></app-features>
+<app-partners></app-partners>
 <app-footer></app-footer>
