--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -67,7 +67,7 @@
               class="form-check-input"
               type="checkbox"
               formControlName="remember"
-              >Se souvenir
+              >Se souvenir de moi
           </label>
         </div>
         <button
