--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -1,6 +1,6 @@
 .site-footer
 {
-  margin-top: 100px;
+  margin-top: 10px;
   background-color:#26272b;
   padding:45px 0 20px;
   font-size:15px;
@@ -28,10 +28,11 @@
 {
   color:white;
 }
+
 .footer-links
 {
   padding-left:0;
-  list-style:none
+  list-style:none;
 }
 .footer-links li
 {
@@ -44,7 +45,7 @@
 }
 .footer-links a:active,.footer-links a:focus,.footer-links a:hover
 {
-  color: #e47282;
+  color: #fc5356;
 }
 .footer-links.inline li
 {
@@ -68,6 +69,12 @@
 {
   margin:0
 }
+
+span.name{
+  font-weight: bold;
+  font-size: 17px;
+}
+
 @media (max-width:991px)
 {
   .site-footer [class^=col-]
@@ -136,18 +143,12 @@
 {
   background-color:#3b5998
 }
-.social-icons a.twitter:hover
+
+.social-icons a.instagram:hover
 {
-  background-color:#00aced
+  background-color:  #E1306C
 }
-.social-icons a.linkedin:hover
-{
-  background-color:#007bb6
-}
-.social-icons a.dribbble:hover
-{
-  background-color:#ea4c89
-}
+
 @media (max-width:767px)
 {
   .social-icons li.title
