--- a/src/styles.css
+++ b/src/styles.css
@@ -7,7 +7,7 @@ body{
   font-weight: 400;
   line-height: 1.5;
   color: #555;
-  background-color: #fff;
+  background-color: #f1f1f1;
 }
 
 .btn-success{
