--- a/src/app/features/features.component.html
+++ b/src/app/features/features.component.html
@@ -19,7 +19,7 @@
                   </div>
                   <div class="feature-content">
                       <h4>LIVRAISON RAPIDE</h4>
-                      <p>DANS L'AFRIQUE CENTRALE & GRATUIT</p>
+                      <p>DANS L'AFRIQUE CENTRALE</p>
                   </div>
               </div>
           </div>
