--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -31,6 +31,7 @@
               <li>info@global-supportservices.com</li>
               <li>Station service OLA omnisport</li>
               <li>(ancien mobile omnisport près du stade Yaoundé, Cameroun)</li>
+              <li>Lundi - Vendredi : 8h-17h</li>
             </ul>
           </div>
         </div>
