--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -9,9 +9,9 @@
     <div class="topnav-right">
       <ul>
         <li> <a routerLink="/account">Mon compte</a></li>
-        <li> <a href=""> Mes préférés </a> </li>
+        <li> <a routerLink="/wishlist"> Mes préférés </a> </li>
         <li> <a routerLink="/login">Connexion</a> </li>
-        <li> <a routerLink="/register">Inscription</a> </li>
+        <li> <a routerLink="/checkout">Paiement</a> </li>
       </ul>
     </div>
   </div>
