--- a/src/app/account/account.component.css
+++ b/src/app/account/account.component.css
@@ -1,5 +1,108 @@
+/* nav */
 nav{
   background-color: white;
   padding: 40px 0;
   border-bottom: 2px solid black;
+  margin: 0 auto;
+  height: 70px;
+  font-family: 'Zen Antique', serif;
+  margin-bottom: 30px;
 }
+
+.nav-contain{
+  width: 1000px;
+  align-items: center;
+  display: flex;
+  justify-content: space-between;
+  margin: auto;
+  height: 100%;
+}
+
+.nav-left{
+  color: black;
+  line-height: 0%;
+}
+
+a{
+  text-decoration: none;
+  color: #fc5356;
+}
+
+.breadcrumb{
+  font-weight: bold;
+}
+
+.active{
+  color: black;
+}
+
+/* page account */
+
+.container{
+  height: 450px;
+  padding: 20px 0;
+  margin: 0 auto;
+  width: 1000px;
+  display: flex;
+}
+
+.content-sidenav{
+  width: 250px;
+  background-color: white;
+  margin-right: 30px;
+  height: 260px;
+}
+
+ul.nav-list{
+  width: 250px;
+  padding-left: 0;
+  cursor: pointer;
+}
+
+a#active{
+  color: white;
+  background-color: #fc5356;
+}
+
+a.nav-link{
+  color: black;
+  font-weight: bold;
+}
+
+a.nav-link:hover{
+  color: white;
+  background-color: #fc5356;
+}
+
+.content-area{
+  background-color: white;
+  width: 100%;
+  padding: 30px;
+  height: 400px;
+}
+
+h6{
+  font-size: 15px;
+  margin: 0 0 30px 0;
+  font-family: 'Zen Antique', serif;
+  font-weight: bold;
+  color: black;
+  line-height: 1.5;
+}
+
+.content-area-ul{
+  margin-bottom: 60px;
+  list-style-type: disc;
+  font-weight: bold;
+}
+
+.content-area-ul a:hover{
+  color: black;
+}
+
+
+
+
+
+
+
