mise en place de la connexion avec l'appi rest via httpClient

--- a/src/app/shop/shop.component.html
+++ b/src/app/shop/shop.component.html
@@ -1,2 +1,98 @@
-<app-header></app-header>
-<p>shop works!</p>
+<app-navigation></app-navigation>
+
+<nav aria-label="breadcrumb">
+  <div class="nav-contain">
+    <div class="nav-left">
+      <h3> ARTICLES </h3>
+      <p>Voici nos différents articles en vente</p>
+    </div>
+    <div class="nav-right">
+      <ol class="breadcrumb">
+        <li class="breadcrumb-item"><a routerLink="/home">Accueil</a></li>
+        <li class="breadcrumb-item active" aria-current="page">Boutique</li>
+      </ol>
+    </div>
+  </div>
+</nav>
+<div class="row">
+  <div class="col-md-4 col-sm-12">
+    <ul class="nav-list">
+      <a class="nav-link" id="active"> Matériel informatique</a>
+      <a class="nav-link">Fournitures de bureau</a>
+      <a class="nav-link ">Fournitures scolaires</a>
+      <a class="nav-link">Autres</a>
+      <a class="nav-link">Retour</a>
+    </ul>
+  </div>
+  <div class="col-md-6 pr-1 col-sm-12" >
+    <div class="row">
+      <div class="col-md-3" *ngFor="let article of articles">
+        <div class="product-wrapper mb-15 text-center">
+          <div class="product-img"> <a href="#" data-abc="true">
+            <img [src]="article.article_picture" alt=""  class="img-fluid">
+           </a> <span class="text-center"> {{article.article_price}} FCFA</span>
+            <div class="product-action">
+              <div class="product-action-style">
+                <p>{{ article.article_name}}</p>
+                <a href="#"><i class="fa fa-plus"></i></a>
+                <a href="#"><i class="fas fa-times"></i></a>
+                <a href="#"><i class="fa fa-shopping-cart"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+   <div class="row">
+      <nav aria-label="Page navigation example">
+        <ul class="pagination">
+          <li class="page-item"><a class="page-link" href="#">Previous</a></li>
+          <li class="page-item"><a class="page-link" href="#">1</a></li>
+          <li class="page-item"><a class="page-link" href="#">2</a></li>
+          <li class="page-item"><a class="page-link" href="#">3</a></li>
+          <li class="page-item"><a class="page-link" href="#">Next</a></li>
+        </ul>
+      </nav>
+    </div>
+  </div>
+</div>
+<!--
+<div class="container">
+  <div class="content-sidenav">
+    <ul class="nav-list">
+      <a class="nav-link" id="active"> Matériel informatique</a>
+      <a class="nav-link">Fournitures de bureau</a>
+      <a class="nav-link ">Fournitures scolaires</a>
+      <a class="nav-link">Autres</a>
+      <a class="nav-link">Retour</a>
+    </ul>
+  </div>
+  <div class="content-area">
+    <div class="container mt-100">
+      <div class="row">
+
+
+      </div>
+      <div class="row">
+        <nav aria-label="Page navigation example">
+          <ul class="pagination">
+            <li class="page-item"><a class="page-link" href="#">Previous</a></li>
+            <li class="page-item"><a class="page-link" href="#">1</a></li>
+            <li class="page-item"><a class="page-link" href="#">2</a></li>
+            <li class="page-item"><a class="page-link" href="#">3</a></li>
+            <li class="page-item"><a class="page-link" href="#">Next</a></li>
+          </ul>
+        </nav>
+      </div>
+    </div>
+  </div>
+
+
+
+       <div *ngFor="let article of articles">
+          {{article.article_description}} {{article.article_picture}} {{article.article_category}} {{article.article_created}}
+        </div>-->
+
+<app-features></app-features>
+<app-partners></app-partners>
+<app-footer></app-footer>
