début du responsive et pagination de la page produit

--- a/src/app/account/account.component.css
+++ b/src/app/account/account.component.css
@@ -2,7 +2,7 @@
 nav{
   background-color: white;
   padding: 40px 0;
-  border-bottom: 2px solid black;
+  border-bottom: 1px solid #8c8c8c;
   margin: 0 auto;
   height: 70px;
   font-family: 'Zen Antique', serif;
