--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -24,8 +24,8 @@
           <ul>
             <li routerLinkActive="active"><a class="active" routerLink="/home">Accueil</a></li>
             <li routerLinkActive="active"><a routerLink="/shop">Boutique</a></li>
-            <li routerLinkActive="active"><a href="">Catégorie</a></li>
             <li routerLinkActive="active"><a routerLink="/contact">Contact</a></li>
+            <li routerLinkActive="active"><a href="">Dashboard</a></li>
             <div class="cart-icon">
               <i class="fas fa-shopping-cart"></i>
             </div>
