--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -88,11 +88,11 @@
         </div>
         <button
           type="submit"
-          class="btn"
+          class="btn btn-sm"
           [disabled]="!loginForm.valid">Connexion
         </button><br><br>
 
-        <a class="form-link" href="">Mot de passe oublié ?</a><hr>
+        <a class="form-link" routerLink="/forgotpassword">Mot de passe oublié ?</a><hr>
         <a class="form-link" routerLink="/register">Créer un compte</a>
       </form>
     </div>
