--- a/src/app/features/features.component.html
+++ b/src/app/features/features.component.html
@@ -1,6 +1,6 @@
 <section class="section bg-lightred mb-0 section-slim" id="features">
   <div class="container clearfix">
-      <div class="row">
+      <div id="content-row" class="row">
           <div class="col-sm-6 col-lg-4">
               <div class="feature-box-1">
                   <div class="icon">
