--- a/src/app/forgotpassword/forgotpassword.component.css
+++ b/src/app/forgotpassword/forgotpassword.component.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Zen+Antique&display=swap');
+
 /* nav */
 nav{
   background-color: white;
@@ -32,13 +34,18 @@ a{
   font-weight: bold;
 }
 
-.active, h1{
+.active{
   color: black;
 }
 
-/* contact page */
+/* forgot password page */
+.forgot {
+  background-color: #fff;
+  padding: 12px;
+}
+
 .padding-bottom-3x {
-  padding-bottom: 53px;
+  padding-bottom: 72px;
 }
 
 .card-footer {
@@ -46,7 +53,6 @@ a{
 }
 
 .btn {
-  color: #fff;
   font-size: 13px;
   border-radius: 0rem;
   background-color: #fc5356;
@@ -67,48 +73,24 @@ a{
 .form-group {
   font-weight: bold;
   color: black;
-  padding-bottom: 15px;
 }
+
 
 .form-control:focus {
   color: #495057;
   background-color: #fff;
   border-color: #76b7e9;
   outline: 0;
-  box-shadow: 0 0 0 0px #28a745;
+  box-shadow: 0 0 0 0px #28a745
 }
 
-.info_user{
-  height: 30px;
-}
-
-.form-control {
-  font-size: 14px;
-  font-weight: bold;
-}
-
-.icon{
-  position: absolute;
-  font-size: 15px;
-  padding-left: 10px;
-  padding-top: 5px;
+h2, p{
+  font-family: 'Zen Antique', serif;
   color: black;
 }
 
-/*
-
-
-*/
-
-
-
-
-
-
-
-
-
-
-
-
+#email-for-pass{
+  height: 25px;
+  font-size: 14px;
+}
 
