--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -125,7 +125,8 @@
             class="form-check-input"
             type="checkbox"
             formControlName="remember"
-          >En cliquant, vous acceptez nos <a href="">mentions légales</a> et notre <a href="">politique de confidentialité</a> .
+          > Conformément à la Loi Informatique et Libertés et Règlement général sur la protection des données (RGPD), vous disposez d’un droit d’accès, de modification, de suppression et d’opposition au traitement de vos données à caractère personnel.
+          Pour plus d'informations, veuillez consulter nos <a href="">mentions légales</a>  et notre <a href="">politique de confidentialité</a>.
         </label>
       </div>
         <button
