--- a/src/app/contact/contact.component.css
+++ b/src/app/contact/contact.component.css
@@ -4,7 +4,7 @@ nav{
   padding: 40px 0;
   border-bottom: 1px solid #8c8c8c;
   margin: 0 auto;
-  height: 50px;
+  height: 70px;
   font-family: 'Zen Antique', serif;
   margin-bottom: 30px;
 }
@@ -32,8 +32,8 @@ a{
   font-weight: bold;
 }
 
-.active, h1{
-  color: black;
+.active{
+  color: #fc5356;
 }
 
 /* contact page */
@@ -95,10 +95,10 @@ a{
   color: black;
 }
 
-/*
-
-
-*/
+.agree {
+  margin-top: 1rem;
+  font-weight: bold;
+}
 
 
 
