--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -8,8 +8,8 @@
     </div>
     <div class="nav-right">
       <ol class="breadcrumb">
-        <li class="breadcrumb-item"><a routerLink="/home">Accueil</a></li>
-        <li class="breadcrumb-item active" aria-current="page">Contact</li>
+        <li class="breadcrumb-item active"><a routerLink="/home">Accueil</a></li>
+        <li class="breadcrumb-item" aria-current="page">Contact</li>
       </ol>
     </div>
   </div>
@@ -49,14 +49,20 @@
               </div>
               </div>
               <div class="card-footer">
-                <button class="btn btn-success" type="submit">Réinitialiser mon mot de passe</button>
+                <button class="btn btn-success" type="submit">Envoyer</button>
                 <a routerLink="/home" class="link-back">retour</a>
+                <div class="agree">
+                    <input
+                      class="form-check-input"
+                      type="checkbox"
+                      formControlName="agree"
+                      >&ensp;je confirme avoir pris connaissance de la <a href="" > politique de confidentialité</a> et des <a href="">mentions légales</a>
+                </div>
               </div>
           </form>
       </div>
   </div>
 </div>
-
 
 
 <app-features></app-features>
