--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -15,6 +15,28 @@
   padding-top: 10px;
 }
 
+button#btn-menu {
+  background: #fff;
+  color: black;
+  height: 10px;
+  margin-top: 5px;
+  margin-right: 10px;
+  border: 1px solid #8c8c8c;
+}
+
+button#btn-menu:focus, .form-control:focus {
+  color: #495057;
+  background-color: #fff;
+  border-color: #76b7e9;
+  outline: 0;
+  box-shadow: 0 0 0 0px #28a745
+}
+
+
+button#btn-menu:hover {
+  color: #fc5356;
+}
+
 .topnav-right{
  padding-right: 30px;
  padding-bottom: 10px;
