--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -11,7 +11,6 @@
           <ul>
             <li><a routerLink="/account">Mon compte</a></li>
             <li><a routerLink="/wishlist"> Mes préférés</a></li>
-            <li><a routerLink="/login">Connexion</a></li>
             <li><a routerLink="/checkout">Paiement</a></li>
           </ul>
         </div>
@@ -25,15 +24,10 @@
             <li routerLinkActive="active"><a class="active" routerLink="/home">Accueil</a></li>
             <li routerLinkActive="active"><a routerLink="/shop">Boutique</a></li>
             <li routerLinkActive="active"><a routerLink="/contact">Contact</a></li>
-            <li routerLinkActive="active"><a href="">Dashboard</a></li>
-            <div class="cart-icon">
-              <i class="fas fa-shopping-cart"></i>
-            </div>
-            <div class="input-group">
-              <input type="search" class="form-control" placeholder="Search" aria-label="Search"
-              aria-describedby="search-addon" />
-              <button type="button" class="btn-search">search</button>
-            </div>
+            <li routerLinkActive="active"><a *ngIf="isSuperAdmin || isAdmin" routerLink="/components/dashboard">Dashboard</a></li>
+
+            <button id="btn-menu" type="button" pButton pRipple icon="pi pi-bars" label="Compte" (click)="menu.toggle($event)"></button>
+            <p-menu #menu [popup]="true" [model]="items"></p-menu>
           </ul>
         </div>
       </div>
