--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -9,9 +9,8 @@
     <div class="topnav-right">
       <ul>
         <li> <a routerLink="/account">Mon compte</a></li>
-        <li> <a routerLink="/wishlist"> Mes préférés </a> </li>
-        <li> <a routerLink="/login">Connexion</a> </li>
-        <li> <a routerLink="/checkout">Paiement</a> </li>
+        <li> <a routerLink="/wishlist"> Mes préférés</a></li>
+        <li> <a routerLink="/checkout">Paiement</a></li>
       </ul>
     </div>
   </div>
@@ -24,7 +23,11 @@
         <li routerLinkActive="active"><a class="active" routerLink="/home">Accueil</a></li>
         <li routerLinkActive="active"><a routerLink="/shop">Boutique</a></li>
         <li routerLinkActive="active"><a routerLink="/contact">Contact</a></li>
-        <li routerLinkActive="active"><a href="">Dashboard</a></li>
+        <li *ngIf="isSuperAdmin || isAdmin" routerLinkActive="active"><a routerLink="/components/dashboard">Dashboard</a></li>
+
+        <button id="btn-menu" type="button" pButton pRipple icon="pi pi-bars" label="Compte" (click)="menu.toggle($event)"></button>
+        <p-menu #menu [popup]="true" [model]="items"></p-menu>
+
         <div class="cart-icon">
           <i class="fas fa-shopping-cart"></i>
         </div>
